Ensure top level stepper form styles only apply to top level stopper forms - In the future these should be wrapped in their own component

--- a/src/frontend/app/shared/components/stepper/steppers/steppers.component.scss
+++ b/src/frontend/app/shared/components/stepper/steppers/steppers.component.scss
@@ -71,7 +71,8 @@
     flex: 1;
     text-align: right;
   }
-  form {
+  .stepper-form {
+    // Use a specific style instead of form element selected. This prevents these generic styles bleading into child components of a stepper
     display: flex;
     flex-direction: column;
     margin-top: 10px;
